# rusty-web-development

./: Cargo.toml  Dockerfile  build.rs  docker-compose.yml  log4rs.yaml
handle-errors/: Cargo.toml
handle-errors/src/: lib.rs
migrations/: 20240607020930_questions_table.down.sql  20240607020930_questions_table.up.sql  20240607022019_answers_table.up.sql  20240616200056_create_accounts_table.down.sql  20240616200056_create_accounts_table.up.sql
mock-server/: Cargo.toml
mock-server/src/: lib.rs
src/: config.rs  lib.rs  main.rs  profanity.rs  store.rs
src/routes/: answer.rs  authentication.rs  question.rs
src/types/: account.rs  answer.rs  pagination.rs  question.rs
