[package]
name = "rusty-web-development"
version = "1.0.0"
edition = "2021"
build = "build.rs"
authors = ["Juan Aguirre"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
warp = "0.3"
serde = { version = "1" , features = ["derive"] }
serde_json = "1"
uuid = {version = "1.8.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
handle-errors = { path = "handle-errors"}
# Logging crates

# Log facade crate: User/Client
# log = "0.4"
# Env logger crate: It's good for a small app
# env_logger = "0.11"
# Log for Rust crate: Requires a config file
# log4rs = "1.3"

# Tracing
tracing = { version = "0.1", features = ["log"]}
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
# Database dependencies
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "migrate", "postgres"]}
# HTTP Client - Based on Hyper
reqwest = { version = "0.12", features = ["json"], default-features = false }
reqwest-middleware = "0.3"
reqwest-retry = "0.5"
# Hashing algorithm
rust-argon2 = "2.1"
# Random values
rand = "0.8"
# Handle for JWT
paseto = "2.0"
# Handler for date and time
chrono = "0.4.19"
# Handler for configuration files
config = { version = "0.14", features = ["toml"]}
# Handler for CLI arguments
clap = { version = "4.5", features = ["derive"]}
# Handler for env variables
dotenv = "0.15"
# Open SSL
openssl = { version = "0.10", features = ["vendored"] }
# Mock server
mock-server ={ path = "mock-server", version = "0.1" }